// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filename is truncated when it is more than max 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment…ent.jpg
          </div>
          <div
            class="secondaryText"
          >
            1 KB
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders expected classes 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment.jpg
          </div>
          <div
            class="secondaryText"
          >
            1 KB
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders icon when icon is specified and attachment is not downloadable 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment.jpg
          </div>
          <div
            class="secondaryText"
          >
            1 KB
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders link when icon is specified and attachment is downloadable 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <a
          class="link"
          href="path://to/file"
          target="_blank"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
        </a>
        <div
          class="description"
          data-testid="description"
        >
          <a
            class="link"
            href="path://to/file"
            target="_blank"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
          </a>
          <div
            class="secondaryText"
          >
            <a
              class="link"
              href="path://to/file"
              target="_blank"
            >
              <div>
                <span
                  class="downloadSize"
                >
                  1 KB
                </span>
                <span
                  class="downloadText"
                >
                  Download
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders link when it is downloadable 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <a
          class="link"
          href="path://to/file"
          target="_blank"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
        </a>
        <div
          class="description"
          data-testid="description"
        >
          <a
            class="link"
            href="path://to/file"
            target="_blank"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
          </a>
          <div
            class="secondaryText"
          >
            <a
              class="link"
              href="path://to/file"
              target="_blank"
            >
              <div>
                <span
                  class="downloadSize"
                >
                  1 KB
                </span>
                <span
                  class="downloadText"
                >
                  Download
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders removal button when it is removable 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment.jpg
          </div>
          <div
            class="secondaryText"
          >
            1 KB
          </div>
        </div>
        <span
          class="container icon Icon--close"
          data-testid="Icon--close"
          role="button"
          tabindex="0"
          type="Icon--close"
        >
          <svg
            aria-hidden="true"
            realfilename="x-stroke.svg"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders uploading text when it is uploading 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment.jpg
          </div>
          <div
            class="secondaryText"
          >
            Uploading...
          </div>
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="progressBar"
          data-testid="progress-bar"
          style="width: 0%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with custom class name 1`] = `
<div>
  <div>
    <div
      class="container custom"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment.jpg
          </div>
          <div
            class="secondaryText"
          >
            1 KB
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with error message 1`] = `
<div>
  <div>
    <div
      class="containerError Alert-prppfq-0 index__c-callout___K1eQ- index__c-callout--error___NED0s ktWtOK"
      data-garden-id="notifications.alert"
      data-garden-version="7.0.2"
      data-testid="error-message"
      role="alert"
      type="error"
    >
      <div
        class="previewError Title-sc-1329g54-0 index__c-callout__title___e5tnb fRGHFa"
        data-garden-id="notifications.title"
        data-garden-version="7.0.2"
      >
        attachment.jpg
      </div>
      <div
        class="secondaryTextError"
      >
        this is incorrect
      </div>
      <button
        class="Close-oze0eo-0 index__c-callout__close___OudEV czaHBx"
        data-garden-id="notifications.close"
        data-garden-version="7.0.2"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`size formatting greater than or equal to 1MB displays correctly 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment.jpg
          </div>
          <div
            class="secondaryText"
          >
            1 MB
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`size formatting greater than or equal to 1MB includes one decimal place precision 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment.jpg
          </div>
          <div
            class="secondaryText"
          >
            1.1 MB
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`size formatting when the file size is less than one kilobyte displays 1 KB 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment.jpg
          </div>
          <div
            class="secondaryText"
          >
            1 KB
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`size formatting when the file size is less than one megabyte displays file size in kilobytes 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="file-name-1234"
    >
      <div
        class="preview"
      >
        <span
          class="container iconPreview Icon--preview-default"
          data-testid="Icon--preview-default"
          type="Icon--preview-default"
        >
          <svg
            aria-hidden="true"
            realfilename="file.svg"
          />
        </span>
        <div
          class="description"
          data-testid="description"
        >
          <div
            class="previewName"
          >
            attachment.jpg
          </div>
          <div
            class="secondaryText"
          >
            999 KB
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
